# CameraW

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CameraWISP.cpp  MLVDataSource.c  MLVFrameUtils.c  MLVReader.c  MLVWriter.c  MLVWriter.h  cameraw_jni.cpp  gles_hdr_rgb.cpp  mlv_structs.h
app/src/main/cpp/liblj92/: lj92.c  lj92.h
app/src/main/java/com/cameraw/: CameraPreview.kt  CameraUtils_Extensions.kt  CameraViewModel.kt  CameraWScreen.kt  CoilUtils.kt  CrashLogger.kt  ExpressiveBottomBar.kt  ExpressiveRecordButton.kt  ExpressiveTheme.kt  ExpressiveTopBar.kt  FocusOverlay.kt  GalleryScreen.kt  GyroflowLogger.kt  MainActivity.kt  ManualControls.kt  Recorder.kt  SettingsSheet.kt  Typography.kt  VulkanHdrBridge.kt
app/src/main/res/drawable/: button_bg.xml  button_primary_bg.xml  counter_background.xml  counter_unselected.xml  gallery_thumbnail.xml  ic_flash_off.xml  ic_flash_on.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_settings.xml  indicator_bg.xml  input_bg.xml  pulse_dot.xml  record_button_main.xml  record_button_rounded_square.xml  recording_indicator_bg.xml  rounded_button_bg.xml  rounded_button_bg_disabled.xml  rounded_dark_bg.xml  rounded_primary_bg.xml  settings_card_bg.xml  spinner_bg.xml  top_bar_bg.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
